--- a/asset/style/app.less
+++ b/asset/style/app.less
@@ -6,9 +6,7 @@
 #app {
     padding: 0;
     height: 100%;
-    .app-wrap  {
-        display: flex;
-        flex-direction: column;
+    .ant-layout  {
         height: 100%; /* 1, 3 */
     }
 }
